# HydroSQL

./: .gitignore  Doxyfile  README.md
client/: CMakeLists.txt  main.cpp  pch.hpp
client/encrypt/include/: encrypt.hpp
client/encrypt/src/: encrypt.cpp
client/network/include/: client.hpp
client/network/src/: client.cpp
docs/html/: _c_make_c_x_x_compiler_id_8cpp.html  _lock_pool_8hpp.html  _lock_pool_8hpp.js  _lock_pool_8hpp__dep__incl.map  _lock_pool_8hpp__dep__incl.md5  _lock_pool_8hpp_source.html  _logical_tree_8cpp.html  _logical_tree_8cpp.js  _logical_tree_8cpp__incl.map  _logical_tree_8cpp__incl.md5  _logical_tree_8hpp.html  _logical_tree_8hpp.js  _logical_tree_8hpp__dep__incl.map  _logical_tree_8hpp__dep__incl.md5  _logical_tree_8hpp__incl.map  _logical_tree_8hpp__incl.md5  _logical_tree_8hpp_source.html  _thread_pool_8cpp.html  _thread_pool_8cpp__incl.map  _thread_pool_8cpp__incl.md5  _thread_pool_8hpp.html  _thread_pool_8hpp.js  _thread_pool_8hpp__dep__incl.map  _thread_pool_8hpp__dep__incl.md5  _thread_pool_8hpp__incl.map  _thread_pool_8hpp__incl.md5  _thread_pool_8hpp_source.html  affairs_8cpp.html  affairs_8cpp__incl.map  affairs_8cpp__incl.md5  affairs_8hpp.html  affairs_8hpp.js  affairs_8hpp__dep__incl.map  affairs_8hpp__dep__incl.md5  affairs_8hpp__incl.map  affairs_8hpp__incl.md5  affairs_8hpp_source.html  annotated.html  annotated_dup.js  authority_8cpp.html  (+394 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  enums_0.js  enums_1.js  (+73 more)
docs/latex/: _c_make_c_x_x_compiler_id_8cpp.tex  _lock_pool_8hpp.tex  _lock_pool_8hpp__dep__incl.md5  _lock_pool_8hpp_source.tex  _logical_tree_8cpp.tex  _logical_tree_8cpp__incl.md5  _logical_tree_8hpp.tex  _logical_tree_8hpp__dep__incl.md5  _logical_tree_8hpp__incl.md5  _logical_tree_8hpp_source.tex  _thread_pool_8cpp.tex  _thread_pool_8cpp__incl.md5  _thread_pool_8hpp.tex  _thread_pool_8hpp__dep__incl.md5  _thread_pool_8hpp__incl.md5  _thread_pool_8hpp_source.tex  affairs_8cpp.tex  affairs_8cpp__incl.md5  affairs_8hpp.tex  affairs_8hpp__dep__incl.md5  affairs_8hpp__incl.md5  affairs_8hpp_source.tex  annotated.tex  authority_8cpp.tex  authority_8cpp__incl.md5  authority_8hpp.tex  authority_8hpp__dep__incl.md5  authority_8hpp__incl.md5  authority_8hpp_source.tex  class_hydro_s_q_l_1_1_client_1_1_network_1_1_client.tex  class_hydro_s_q_l_1_1_server_1_1_authority_1_1_auth_manager.tex  class_hydro_s_q_l_1_1_server_1_1_authority_1_1_authoriser.tex  class_hydro_s_q_l_1_1_server_1_1_engine_1_1_lock_pool.tex  class_hydro_s_q_l_1_1_server_1_1_engine_1_1_table.tex  class_hydro_s_q_l_1_1_server_1_1_network_1_1_blocking_queue.tex  class_hydro_s_q_l_1_1_server_1_1_network_1_1_server.tex  class_hydro_s_q_l_1_1_server_1_1_network_1_1_thread_pool.tex  class_hydro_s_q_l_1_1_server_1_1_parser_1_1_affair.tex  class_hydro_s_q_l_1_1_server_1_1_parser_1_1_affair__inherit__graph.md5  class_hydro_s_q_l_1_1_server_1_1_parser_1_1_create_table_a.tex  (+133 more)
server/: CMakeLists.txt  main.cpp  pch.hpp
server/authority/include/: authority.hpp
server/authority/src/: authority.cpp
server/engine/include/: LockPool.hpp  LogicalTree.hpp  struct.hpp  table.hpp
server/engine/src/: LogicalTree.cpp  table.cpp
server/network/include/: ThreadPool.hpp  server.hpp
server/network/src/: ThreadPool.cpp  server.cpp
server/parser/include/: affairs.hpp  parser.hpp
server/parser/src/: affairs.cpp  parser.cpp
utils/DataStructure/include/: stack.hpp
utils/logger/include/: logger.hpp
utils/logger/src/: logger.cpp
